<resources>
    <string name="app_name">IsiBox</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_account">Don\'t have an account ?</string>
    <string name="register">Register now</string>
    <string name="create_your_free_account">Create your free account</string>
    <string name="sign_up_with">Sign Up with</string>
    <string name="do_you_already_have_an_account">Do you already have an account?</string>
    <string name="term_isibox_info">By signing up, you agree to Isibox</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="is_required">VALUE Harus diisi !!</string>
    <string name="search_items_or_keywords">Search items or keywords</string>
    <string name="find_what_today">Hari ini mau cari apa?</string>
    <string name="create_request">Buat Request </string>
    <string name="view_request">Lihat Permintaan</string>
    <string name="my_profile">Profil Saya</string>
    <string name="my_request">Request Saya</string>
    <string name="request">Request</string>
    <string name="expired">Date Expired</string>
    <string name="no_offer">Belum Ada Penawaran</string>
    <string name="offer">Penawaran</string>
    <string name="request_qty">Jumlah pesanan</string>
    <string name="price_target">Target Harga</string>
    <string name="my_order">Pesanan Saya</string>
    <string name="orders">Orders</string>
    <string name="completed">Completed</string>
    <string name="grand_total">Grand Total</string>
    <string name="date_created">Date Created</string>
    <string name="photo_product">Foto Produk</string>
    <string name="product_name">Nama Produk</string>
    <string name="description">Penjelasan</string>
    <string name="specification_and_price"><![CDATA[Spesifikasi & Harga]]></string>
    <string name="quantity">Jumlah</string>
    <string name="metrik">Metrik</string>
    <string name="category">Kategori</string>
    <string name="choose_category">Pilih Kategori</string>
    <string name="next">Lanjut</string>
    <string name="sending_time">Waktu Pengiriman</string>
    <string name="sending">Pengiriman</string>
    <string name="choose">Pilih</string>
    <string name="insert">Masukan</string>
    <string name="required">Harus diisi</string>
    <string name="keywords">Kata Kunci</string>
    <string name="reference_link">Referensi Link</string>
    <string name="payment">Pembayaran</string>
    <string name="delivery_address">Alamat Pengiriman</string>
    <string name="request_type">Tipe Permintaan</string>
</resources>