<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rv_header"
        android:background="@color/primary"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:text="@string/my_order"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_below="@+id/rv_header"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:background="#FBFBFB"
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <LinearLayout
            android:background="@drawable/shape_request_header"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:weightSum="2"
            android:visibility="gone"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <com.rzc.isibox.presentation.component.MyRelativeLayout
                android:id="@+id/rv_request"
                app:m_color="@color/primary"
                app:m_radiusLeftTop="10"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/orders"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </com.rzc.isibox.presentation.component.MyRelativeLayout>
            <com.rzc.isibox.presentation.component.MyRelativeLayout
                android:id="@+id/rv_quotes"
                app:m_color="@color/white"
                app:m_radiusRightTop="10"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/completed"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </com.rzc.isibox.presentation.component.MyRelativeLayout>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/frame_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</RelativeLayout>