<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rv_header"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/iv_back"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/back_figma"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <TextView
            android:textColor="@color/black"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_bold"
            android:textSize="17sp"
            android:text="Request Order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/ln_status"
        android:layout_below="@id/rv_header"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="9dp">

        <View
            android:background="@color/primaryDark"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <View
            android:background="#B7E1FF"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_below="@+id/ln_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/photo_product"
                android:fontFamily="@font/roboto_medium"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="#F2F7FF"
                android:textColor="@color/black"
                android:layout_marginTop="13dp"
                android:layout_width="match_parent"
                android:layout_height="25dp"/>
            <com.rzc.isibox.presentation.request.view.ImageChooserView
                android:id="@+id/view_chooserImage"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/product_name"
                android:fontFamily="@font/roboto_medium"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="#F2F7FF"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="25dp"/>

            <com.rzc.isibox.presentation.component.MyEdiText
                android:id="@+id/et_nameProduct"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/description"
                android:fontFamily="@font/roboto_medium"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="#F2F7FF"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="25dp"/>
            <com.rzc.isibox.presentation.component.MyEdiText
                android:id="@+id/et_description"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/specification_and_price"
                android:fontFamily="@font/roboto_medium"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="#F2F7FF"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="25dp"/>

            <LinearLayout
                android:weightSum="10"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/quantity"
                        android:fontFamily="@font/roboto_light"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:layout_marginBottom="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <com.rzc.isibox.presentation.component.MyEdiText
                        android:id="@+id/et_qty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="4.5"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/metrik"
                        android:fontFamily="@font/roboto_light"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:layout_marginBottom="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <com.rzc.isibox.presentation.component.MyEdiText
                        android:id="@+id/et_metric"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="3.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/price_target"
                        android:fontFamily="@font/roboto_light"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:layout_marginBottom="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <com.rzc.isibox.presentation.component.MyEdiText
                        android:id="@+id/et_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:text="Referensi Link (Opsional)"
                android:fontFamily="@font/roboto_medium"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="#F2F7FF"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="25dp"/>
            <com.rzc.isibox.presentation.component.MyEdiText
                android:id="@+id/et_reference"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/category"
                android:fontFamily="@font/roboto_medium"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="#F2F7FF"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="25dp"/>


            <com.rzc.isibox.presentation.component.MyEdiText
                android:id="@+id/et_category"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.rzc.isibox.presentation.component.MyButton
                android:id="@+id/btn_next"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</RelativeLayout>