<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_gravity="center_horizontal"
            android:src="@drawable/icon_isibox_white"
            android:layout_marginBottom="40dp"
            android:layout_width="150dp"
            android:layout_height="60dp"/>

        <EditText
            android:id="@+id/et_email"
            android:textColorHint="@color/grey"
            android:hint="Email"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:fontFamily="@font/roboto_medium"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="4">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:background="@color/white"
                android:fontFamily="@font/roboto_medium"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="15sp" />

            <RelativeLayout
                android:id="@+id/rv_icon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/iv_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_eye_off"
                    app:tint="@color/primary" />
            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:text="@string/forgot_password"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_medium"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginEnd="25dp"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="35dp"/>

        <com.rzc.isibox.presentation.component.MyButton
            android:id="@+id/btn_login"
            android:layout_marginTop="20dp"
            android:layout_marginStart="23dp"
            android:layout_marginEnd="23dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="35dp">
            <TextView
                android:text="@string/dont_have_an_account"
                android:fontFamily="@font/roboto_regular"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/tv_register"
                android:text="@string/register"
                android:fontFamily="@font/roboto_bold"
                android:textSize="15sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>